# sites-stat

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
deploy/: Dockerfile  celery_beat.sh  celery_start.sh  celery_worker.sh  docker-compose.prod.yml  uwsgi.ini
deploy/app/: Dockerfile  uwsgi.ini
deploy/app-serverless/: Dockerfile  uwsgi.ini
src/api/: permissions.py  servises.py  urls.py  views.py
src/app/: celery.py  clickhouse.py  enums.py  settings.py  urls.py
src/frontend/: package-lock.json  package.json  vite.config.js
src/frontend/src/: consts.js  services.js
src/frontend/src/assets/: add_counter.css  auth_register.css  base.css  collectdata.js  counter.css  counteradd.css  counters.css  edit_counter.css  errors.css  font-awesome.min.css  main.css  profile.css  style.css
src/frontend/src/components/: FilterPanel.vue
src/frontend/src/containers/: CounterPage.vue  FilterPanel.vue
src/frontend/src/stores/: counter.js  panel.js
src/frontend/src/views/CounterAdd/: App.vue  index.html  main.js
src/frontend/src/views/CounterEdit/: App.vue  index.html  main.js
src/frontend/src/views/CounterPage/: App.vue  index.html  main.js
src/web/: admin.py  clickhouse_models.py  enums.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
src/web/management/commands/: clickhouse_group_tables.py  clickhouse_migrate.py  create_mview.py  create_or_update_mview.py
src/web/migrations/: 0001_initial.py  0002_alter_user_managers_alter_counter_link_and_more.py  0003_alter_user_managers.py  0004_alter_counter_options_alter_user_options_and_more.py  0005_alter_counter_user.py
src/web/templates/web/: 404.html  500.html  add_counter.html  auth.html  base.html  base_with_breadcrumbs.html  counter.html  counters_list.html  edit_counter.html  main.html  profile.html  registration.html  test.html
(+22 files in other folders)
