[tool.poetry]
name = "sites-stat"
version = "0.1.0"
description = ""
authors = ["linar <chevianchik@gmail.com>"]
readme = "README.md"
packages = [{include = "sites_stat"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.1.2,<4.2.0"
psycopg2-binary = ">=2.9.3,<2.10.0"
infi-clickhouse-orm = "^2.1.3"



[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
